# sewagedata_app

./: pyproject.toml
.devcontainer/: devcontainer.json
data/: coordData.json
tests/: __init__.py  js_map.json
